# crosszones

./: LICENSE  README.md  fix_tauri.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: RELEASE.md
public/: zone-overlay.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: ScreenInfo.ts  Settings.ts  Zone.ts  ZoneLayout.ts
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  hotkeys.rs  lib.rs  main.rs  snap.rs  store.rs  tray.rs  window_manager.rs
src-tauri/src/drag_drop/: macos.rs  mod.rs  overlay.rs  windows.rs
src-tauri/src/drag_drop/linux/: mod.rs
src-tauri/src/drag_drop/macos/: mod.rs
src-tauri/src/drag_drop/windows/: mod.rs
src-tauri/src/platform/: linux.rs  mod.rs  windows.rs
src-tauri/src/rpc/: mod.rs  rpc.rs
src-tauri/src/snapping/: accessibility.rs  action.rs  common.rs  macos.rs  mod.rs  window_rect.rs  window_state.rs
src-tauri/src/snapping/accessibility_helpers/: attribute.rs  mod.rs  ui_element.rs  util.rs
src-tauri/src/snapping/macos/: accessibility.rs  mod.rs  screen.rs
src-tauri/src/snapping/macos/accessibility_helpers/: action.rs  attribute.rs  ui_element.rs
src-tauri/src/snapping/windows/: mod.rs
src-tauri/src/store/: hotkeys.rs  mod.rs  settings.rs  zone_layouts.rs
src-tauri/src/window/: macos.rs  mod.rs  window.rs  window_manager.rs  windows.rs
src-tauri/src/zones/: mod.rs  zone_layout_editor.rs  zone_windows.rs
src/components/: HotkeySettings.css  HotkeySettings.tsx  PermissionCheck.tsx  TitleBar.tsx  WindowSnapIcon.tsx  layout.tsx
src/components/HotkeySettings/: HotkeyConfig.tsx  HotkeySettings.css  HotkeySettings.tsx  constants.tsx  types.ts  useHotkeyRecording.ts
src/components/PermissionCheck/: PermissionCheck.tsx
src/components/Settings/: Settings.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/WindowSnapIcon/: WindowSnapIcon.tsx
src/components/ZoneLayouts/: FullscreenZoneEditor.tsx  InstructionsOverlay.tsx  SplitBar.tsx  Zone.tsx  ZoneEditor.tsx  ZoneHotkeyInput.tsx  ZoneLayoutEditor.tsx  ZoneLayoutList.tsx  ZonePreviewCanvas.tsx  useZoneDrag.ts  useZoneEditor.ts  useZoneOperations.ts  useZoneResize.ts  useZoneSnap.ts
src/components/ui/: dialog.tsx  layout.tsx
src/features/HotkeySettings/: HotkeyConfig.tsx  HotkeySettings.tsx  constants.tsx  keyMapping.ts  types.ts  useHotkeyRecording.ts
src/features/PermissionCheck/: PermissionCheck.css  PermissionCheck.tsx
src/features/Permissions/: Permissions.tsx
src/features/Settings/: Settings.tsx
src/features/ZoneLayouts/: ContextMenu.tsx  DeleteConfirmDialog.tsx  FullscreenZoneEditor.tsx  InstructionsOverlay.tsx  MergeDialog.tsx  ZoneHotkeyInput.tsx  ZoneLayoutDetails.tsx  ZoneLayoutList.tsx  ZonePreviewCanvas.tsx  types.ts  useZoneResize.ts
src/features/ZoneLayouts/ZoneEditor/: ContextMenu.tsx  DeleteConfirmDialog.tsx  FullscreenZoneEditor.tsx  MergeDialog.tsx  Zone.tsx
src/features/ZoneLayouts/ZoneEditor/hooks/: useZoneDrag.ts  useZoneEditor.ts  useZoneOperations.ts  useZoneResize.ts  useZoneSnap.ts
src/features/ZoneLayouts/ZoneOverlay/: ZoneOverlay.tsx
src/features/ZoneLayouts/hooks/: useActiveLayout.ts
src/lib/: toast.ts  utils.ts
src/lib/store/: settings.ts
src/screens/: HotkeysTab.tsx  LayoutAreasTab.tsx  MainView.tsx  SettingsTab.tsx  ZonesTab.tsx
src/services/: tray.ts
src/types/: snapping.ts  zoneLayout.ts
