[package]
name = "crosszones"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crosszones_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27.1"
strum_macros = "0.27.1"
tauri-plugin-persisted-scope = "2"
tauri-plugin-macos-permissions = "2.2.0"

tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
thiserror = "2.0.12"
tauri-plugin-os = "2"

[target.'cfg(any(target_os = "windows"))'.dependencies]
windows = { version = "0.61.1", features = ["Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
block = "0.1.6"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
cocoa = "0.26.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
